add missing package

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@lifi/widget": "^3.24.3",
     "@mysten/dapp-kit": "^0.16.15",
     "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.83.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "viem": "^2.32.1",
     "wagmi": "^2.15.7"
   },
   "devDependencies": {
