--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@bigmi/react": "^0.4.2",
+    "@cloudflare/next-on-pages": "^1.13.12",
     "@lifi/widget": "^3.24.3",
     "@mysten/dapp-kit": "^0.16.15",
     "@solana/wallet-adapter-react": "^0.15.39",
