--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudflare/next-on-pages": "^1.13.12",
     "@lifi/widget": "^3.24.3",
     "@mysten/dapp-kit": "^0.16.15",
+    "@opennextjs/cloudflare": "^1.5.1",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.83.0",
