--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,5 +2,11 @@
     "compatibility_flags": [
       "nodejs_compat"
     ],
-    "compatibility_date": "2025-05-05"
+    "compatibility_date": "2025-05-05",
+    "main": ".open-next/worker.js",
+    "assets": {
+        "directory": ".open-next/assets",
+        "binding": "ASSETS"
+    },
+    "name": "dolla-bridge-interface"
   }
